Add prediction of new water source potability
- Added the prediction of the new water source's potability using the best-performing Random Forest model.
- Provided the feature values of the new water source to the model and determined that it is potable.
- Included appropriate headings and explanations in the prediction section.

--- a/water_quality.ipynb
+++ b/water_quality.ipynb
@@ -1210,7 +1210,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Prediction of New Water Source Potability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>In this section, it is estimated whether the new water source is drinkable or not by using the best performing Random Forest model. The property values ​​of the new water source will be given to the model and the model's predictions will be written.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New water source is potable.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# New Water\n",
+    "new_water_source = [[7.2, 150, 20000, 6, 300, 400, 15, 60, 3]]\n",
+    "\n",
+    "# Prediction with best model which is Random Forest\n",
+    "prediction = best_model_rf.predict(new_water_source)\n",
+    "\n",
+    "# Prediction Result\n",
+    "if prediction[0] == 1:\n",
+    "    print(\"New water source is potable.\")\n",
+    "else:\n",
+    "    print(\"New water source is inpotable\")"
+   ]
   }
  ],
  "metadata": {
