--- a/water_quality.ipynb
+++ b/water_quality.ipynb
@@ -155,6 +155,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "data = pd.read_csv(\"C:/Users/MRE/Documents/GitHub/Water_Qualityy/water_potability.csv\")\n",
     "\n",
